# hello-world-juce

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  main.cpp
